fixed bug with horizontal scroll on mobile version

--- a/style/_mobile.scss
+++ b/style/_mobile.scss
@@ -293,10 +293,10 @@
             &-decorPluses {
                 position: absolute;
                 top: 83%;
-                right: -10%;
+                right: -8%;
                 pointer-events: none;
-                width: 25vw;
-                height: 25vw;
+                width: 23vw;
+                height: 23vw;
                 text-align: center;
                 display: grid;
                 grid-template-columns: repeat(5, 1fr);
