--- a/style/style.css
+++ b/style/style.css
@@ -1455,10 +1455,10 @@ body {
   .steps__card-decorPluses {
     position: absolute;
     top: 83%;
-    right: -10%;
+    right: -8%;
     pointer-events: none;
-    width: 25vw;
-    height: 25vw;
+    width: 23vw;
+    height: 23vw;
     text-align: center;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
